# WinMagnification

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  _utils.py  _wrapper.py  constants.py  defaults.py  pyproject.toml  test.py  utils.py  win_magnification.py  windows_utils.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: clear.py  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/: module.rst
docs/source/shared/wrapper/: common.rst  component.rst  head.rst
example/: windows_utils.py
tests/: test.py
win_magnification/: __init__.py  _functional_wrapper.py  _object_utils.py  _object_wrapper.py  _objects.py  _utils.py  _wrapper.py  const.py  constants.py  defaults.py  effects.py  objects.py  old.py  tools.py  types.py  utils.py
