[project]
name = "WinMagnification"
version = "0.0.1"
authors = [
  { name="MaxBQb" },
]
description = "Python wrapper for Windows Magnification API"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]

[project.urls]
"Homepage" = "https://github.com/MaxBQb/WinMagnification"
"Bug Tracker" = "https://github.com/MaxBQb/WinMagnification/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"